# AlgoStaff

./: .gitignore  README.md  pyproject.toml
src/Dz3BybitApi/: BybityPublicAPI.py
src/Dz4PrivateBinance/: PrivateBinance.py  testWsBinance.py
src/Dz5PrivateBybit/: PrivateBybit.py
src/Dz6OrderTypes/: OrderTypes.py
src/DzAsyn1/: main.py
src/algodz/: __init__.py
src/algodz/Dz1/: Dz1.py  Dz1Binance.py  Dz1pyBit.py
src/algodz/DzBybit/BybitWeb/: BybitWsConnector.py  bybitWeb.py
src/algodz/DzWeb/: AlgoDzClass.py  AlogDzWeb.py  WsConnectBin.py
src/utils/api/: binance.py  bybit.py  bybit.py~  ws_binance.py  ws_bybit.py
src/utils/binance/: __init__.py  client.py  delivery.py  error.py  futures.py  spot.py  symbols.py  websockets.py
src/utils/binance/endpoints/: delivery.py  futures.py  spot.py
src/utils/bybit/: requirements.txt
src/utils/connector/: base_api.py  base_ws.py  base_ws_user_data.py  binance_api.py  binance_ws.py  binance_ws_user_data.py  bybit_api.py  bybit_ws.py  bybit_ws_user_data.py  cryptocom_api.py  cryptocom_ws.py  cryptocom_ws_user_data.py  exchange_factory.py  symbol_info.py
src/utils/keys/: BinanceApi.py  BybitApi.py
